# dotfiles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  SPEC.md  config.yml  initialize.sh  linksrc  manage.rb  pyproject.toml
config/: Xdefaults-nvimgui  Xresources  Xresources-4k  Xresources-aphelion  Xresources-hd  Xresources-hires  Xresources-local  ackrc  alias  bashrc  compton.conf  dunstrc  flake8  gemrc  gtkrc-2.0  gtkrc-2.0-4k  gtkrc-2.0-aphelion  gtkrc-2.0-hd  gtkrc-2.0-kelsier  gtkrc-2.0-local  gtkrc-2.0-mid  irbrc  loadkeys.keymap  mimeapps.list  npmrc  okularpartrc  profile  pylintrc  remote_root_bashrc  remote_root_bashrc_later  spotify-flags.conf  starship.toml  x11-scale-factor-hd  xinitrc  xmodmap  xprofile  xscreensaver
config/Xresources.d/: README.txt  cursor  cursor-hires  font  font-generic  font-hires  rxvt-unicode  urxvt
config/_archive/: archey3.cfg  bashrc  compton.conf  conkybarrc  flake8  pryrc  pylintrc  remote_root_bashrc  zshenv-old
config/_from_shaurya/: azure.sh  readme.md  vm-setup.md
config/alacritty/: alacritty.toml  alacritty.yml
config/amethyst/: amethyst.yml
config/applications/: chromium-wayland-newwindow.desktop  google-chrome-wayland-newwindow.desktop
config/arch/: installation-archinstall.md  installation-initial.md  installation.sh  installation.yaml
config/cavemem/: settings.json
config/cheat/: conf.yml
config/cheats/: postgres
config/feh/: keys
dotfiles/: __init__.py
lib/: linker.rb
scripts/: reverse_movie.rb  test-codex-config.py
todo/: presenterm-nvim-plan.md
(+1101 files in other folders)
