[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Manage user environment."
authors = ["John Prince <jtprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
isort = "^5.10.1"
black = "^21.11b1"
neovim = "^0.3.1"
flake8 = "^4.0.1"
"ruamel.yaml" = "^0.17.17"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
