[tool.poetry]
name = "dotfiles"
version = "0.2.0"
description = "Manage user environment."
authors = ["John Prince <jtprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
neovim = "^0.3.1"
ruff = "^0.2.2"
ruyaml = "^0.91.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
